title page done

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <meta charset="utf-8">
 
 
-
 <!-- KC: BOOTSTRAP https://getbootstrap.com/docs/3.3/getting-started/ -->
 
 <!-- Latest compiled and minified CSS -->
@@ -21,14 +20,14 @@
 
 
 <!-- Add font awesome -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
   <style>
   @import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic);
   @import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic);
-  @import url('https://fonts.googleapis.com/css?family=Andada|Squada+One|Jaldi');
-  /*@import url('https://fonts.googleapis.com/css?family=Bungee|Passion+One');*/
+  @import url('https://fonts.googleapis.com/css?family=Andada|Squada+One|Jaldi|Luckiest+Guy|Bowlby+One+SC');
+  @import url('https://fonts.googleapis.com/css?family=Anton|Bangers|Rubik+Mono+One');
   /*<link href="https://fonts.googleapis.com/css?family=Bungee|Candal|Passion+One" rel="stylesheet">*/
   @import url('https://fonts.googleapis.com/css?family=Arya');
   body {
@@ -38,7 +37,7 @@
   }
 
   h1 {
-    font-family: 'Squada One', cursive;
+    font-family: 'Rubik Mono One'', cursive;
     /*font-family: 'Bungee', cursive;*/
     /*font-family: 'Passion One', cursive;*/
     /*font-family: 'Candal', sans-serif;*/
@@ -88,17 +87,17 @@
   }
 
   .alert{
-    color: #1583cc;
+    color: #1b95e0;
     background-color: #fff;
   }
 
   .success{
-    color: #3adb76;
+    color: #3fb3b2;
   }
 
   /*warning: #ffae00*/
   a > code {
-    color: #50b5d5;
+    color: #3fb3b2;
   }
 
   pre {
@@ -110,7 +109,7 @@
   }
 
   .remark-inline-code {
-    color: #1583cc;
+    color: #1b95e0;
     background: #000000;
   }
 
@@ -125,7 +124,7 @@
   }
 
   .style1 {
-    background: #000000;
+    background: #232323;
     color: #fff;
     text-shadow: 0 0 2px #333;
   }
@@ -134,7 +133,7 @@
   }
 
   .style1 a {
-    color: rgb(21, 131, 204);
+    color: #3fb3b2;
   }
 
   /*add 2 column*/
@@ -147,8 +146,8 @@
 
 
   .style2 {
-    background: rgb(21, 131, 204);
-    color: #000000;
+    background: #3fb3b2;
+    color: #232323;
   }
   .style2 h1, .style2 h2 {
     color: #fff;
@@ -182,18 +181,24 @@
     layout: true
     class: center, middle, style1
     ---
-    ![:scale 65%](./img/logos.png)
 
-    ----
-    <br/>  <br/>  <br/>
+    <br/>
 
-    # IMPACT OF BIOTIC INTERACTIONS ON THE GEOGRAPHICAL REPARTITION OF SPECIES
+    # TOWARDS AN ENERGETIC THEORY OF ISLAND BIOGEOGRAPHY
+
+    <br/><br/>
+    ### BSE Annual Meeting - December 14, 2017
+
+    <br>
+
+    ### .left[[Kevin Cazelles](http://kevincazelles.fr) &nbsp;&nbsp; [<i class="fa fa-github" aria-hidden="true"></i>](https://github.com/KevCaz/talkBES2017)]
+
+    <img src="img/inSilecoLogo.png" height="120" align="right"/>
+    <img src="img/logoUniv.png" height="120" align="right"/>
 
 
-    <br/><br/><br/>
-    ### LECA, Genoble, February 9th
-    ### [Kévin Cazelles](http://kevincazelles.fr) &nbsp;&nbsp; [<i class="fa fa-github" aria-hidden="true"></i>](https://github.com/KevCaz)
-
+    ### .left[Kevin S. McCann]
+    ### .left[Domique Gravel]
 
 
     ---
