add link to inSileco Blog

--- a/index.html
+++ b/index.html
@@ -146,11 +146,11 @@
 
 
   .style2 {
-    background: #3fb3b2;
+    background: #595959;
     color: #232323;
   }
   .style2 h1, .style2 h2 {
-    color: #fff;
+    color: #3fb3b2;
     line-height: 1em;
     font-size: 2.2em;
   }
@@ -193,8 +193,9 @@
 
     ### .left[[Kevin Cazelles](http://kevincazelles.fr) &nbsp;&nbsp; [<i class="fa fa-github" aria-hidden="true"></i>](https://github.com/KevCaz/talkBES2017)]
 
-    <img src="img/inSilecoLogo.png" height="120" align="right"/>
-    <img src="img/logoUniv.png" height="120" align="right"/>
+    .right[[inSileco](https://inSileco.github.io/)]
+    <img src="img/inSilecoLogo.png" height="120" align="right" style="padding:8px"/>
+    <img src="img/logoUniv.png" height="120" align="right" style="padding:12px"/>
 
 
     ### .left[Kevin S. McCann]
