add macArthur and Wilson and TTIB

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
     .center[![:scale 100%](img/figall6.png)]
 
     ---
-    # A set of rules / law
+    # A set of rules
     <hr/>
 
     .center[![:scale 100%](img/figall7.png)]
@@ -336,43 +336,18 @@
     ---
     # MacArthur et Wilson (1963, 1967)
     <hr/><br/>
-    .center[![:scale 100%](./fig/figMW1.png)]
+    .center[![:scale 100%](img/figMW5.png)]
 
     ---
     # MacArthur et Wilson (1963, 1967)
     <hr/><br/>
-    .center[![:scale 100%](./fig/figMW2.png)]
+    .center[![:scale 100%](img/figMW6.png)]
 
     ---
     # MacArthur et Wilson (1963, 1967)
     <hr/><br/>
-    .center[![:scale 100%](./fig/figMW3.png)]
+    .center[![:scale 100%](img/figMW8.png)]
 
-    ---
-    # MacArthur et Wilson (1963, 1967)
-    <hr/><br/>
-    .center[![:scale 100%](./fig/figMW4.png)]
-
-    ---
-    # MacArthur et Wilson (1963, 1967)
-    <hr/><br/>
-    .center[![:scale 100%](./fig/figMW5.png)]
-
-    ---
-    # MacArthur et Wilson (1963, 1967)
-    <hr/><br/>
-    .center[![:scale 100%](./fig/figMW6.png)]
-
-    ---
-    # MacArthur et Wilson (1963, 1967)
-    <hr/><br/>
-    .center[![:scale 100%](./fig/figMW7.png)]
-
-
-    ---
-    # MacArthur et Wilson (1963, 1967)
-    <hr/><br/>
-    .center[![:scale 100%](./fig/figMW8.png)]
 
 
 
@@ -412,8 +387,8 @@
     <br/>
 
     --
-    ## Colonisation and extinction depend on the local community
-    <br/>
+    ### .right[Cazelles *et al*, 2016, [*Ecography*.](http://doi.org/10.1111/ecog.01714)]
+
 
 
     ???
@@ -421,137 +396,33 @@
 
 
     ---
-    # What did I do?
+    # Networks within the TIB
     <hr/><br/>
 
-    .center[![:scale 100%](./fig/figeco1.png)]
-
-    ---
-    # What did I do?
-    <hr/><br/>
-
-    .center[![:scale 100%](./fig/figeco2.png)]
-
-    ---
-    # What did I do?
-    <hr/><br/>
-
-    .center[![:scale 100%](./fig/figeco3.png)]
-
-    ---
-    # What did I do?
-    <hr/><br/>
-
-    .center[![:scale 100%](./fig/figeco4.png)]
-
-    ---
-    # What did I do?
-    <hr/><br/>
-
-    .center[![:scale 100%](./fig/figeco5.png)]
-
-
+    .center[![:scale 100%](img/figeco1.png)]
 
 
     ---
-    # Abiotic variables vary
+    # Network in the TIB
     <hr/><br/>
 
-    .center[![:scale 100%](./fig/figniche1.png)]
+    .center[![:scale 100%](img/figeco3.png)]
 
     ---
-    # Abiotic variables vary
+    # Network in the TIB
     <hr/><br/>
 
-    .center[![:scale 100%](./fig/figniche2.png)]
+    .center[![:scale 100%](img/figeco7.png)]
 
-    ---
-    # Abiotic variables vary
-    <hr/><br/>
-
-    .center[![:scale 100%](./fig/figniche3.png)]
-
-
-
-    ---
-    # What did I do?
-    <hr/><br/>
-
-    .center[![:scale 100%](./fig/figeco6.png)]
-
-    ---
-    # What did I do?
-    <hr/><br/>
-
-    .center[![:scale 100%](./fig/figeco7.png)]
-
-    ---
-    # What did I do?
-    <hr/><br/>
-
-    .center[![:scale 100%](./fig/figeco8.png)]
-
-
-    ---
-    # Results: the classical theory revisited
-    <hr/><br/>
-
-    .center[![:scale 100%](./fig/figgtib0.png)]
-
-    ---
-    # Results: the classical theory revisited
-    <hr/><br/>
-
-    .center[![:scale 100%](./fig/figgtib1.png)]
-
-
-    ---
-    # Results: the classical theory revisited
-    <hr/><br/>
-
-    .center[![:scale 100%](./fig/figgtib2.png)]
-
-    ---
-    # Results: the classical theory revisited
-    <hr/><br/>
-
-    .center[![:scale 100%](./fig/figgtib3.png)]
-
-    ---
-    # Results: the classical theory revisited
-    <hr/><br/>
-
-    .center[![:scale 100%](./fig/figgtib4.png)]
 
 
     ---
     # Limits
     <hr/>
 
-    ## For `\(n\)` species, a network `\(W\)`, abiotic variable(s) `\(E\)`,
-    --
-
-    <br/>
-
-    ## Community `\(C_k = \{0, 1, 0, 0, ..., 1, 0\}\)`
-    --
-
-    ## `\(P(C_{k,t+1} | C_{l,t+1}) = f(W, E)\)`
-
-    <br/>
-
-    --
-    ## `\(n\)` species `\(2^n\)` potential communities
-
-
-    --
-    ## Harris, 2016, *Ecology*
-
-
-    --
-    <br/>
-    ### .right[Cazelles *et al*, 2016, [*Ecography*.](http://doi.org/10.1111/ecog.01714)]
-
+    Addidtionnaly to the math ;omits I was quite unsatified
+    because of the arbitrary of the model
+    wonder a new set of quetsioj
 
 
 
@@ -569,9 +440,9 @@
     layout: true
     class: center, middle, style2
     ---
-    # CO-OCCURRENCE AND ECOLOGICAL NETWORK
+    # Perspectives
     <hr />
-    ### How the properties of ecological networks influence co-occurrence?
+    ### Why this could be useful?
 
 
     ---
@@ -583,316 +454,10 @@
     # Co-occurrence and biotic interactions
     <hr/><br/>
 
-    .center[![:scale 100%](./fig/figcooc1.png)]
+    .center[![:scale 100%](img/figcooc1.png)]
 
-    ---
-    # Co-occurrence and biotic interactions
-    <hr/><br/>
 
-    .center[![:scale 100%](./fig/figcooc2.png)]
 
-    ---
-    # Co-occurrence and biotic interactions
-    <hr/><br/>
-
-    .center[![:scale 100%](./fig/figcooc3.png)]
-
-    ---
-    # Co-occurrence and biotic interactions
-    <hr/><br/>
-
-    .center[![:scale 100%](./fig/figcooc4.png)]
-
-    ---
-    # Co-occurrence and biotic interactions
-    <hr/><br/>
-
-    .center[![:scale 100%](./fig/figcooc5.png)]
-
-    ---
-    # Co-occurrence and biotic interactions
-    <hr/><br/>
-
-    .center[![:scale 100%](./fig/figcooc6.png)]
-
-
-    ---
-    # Checkerboard distribution (Diamond 1975)
-    <hr/><br/>
-
-    .center[![:scale 55%](./fig/figCS1.png)]
-
-
-    ---
-    # Checkerboard distribution (Diamond 1975)
-    <hr/><br/>
-
-    .center[![:scale 55%](./fig/figCS2.png)]
-
-
-
-    ---
-    # Checkerboard distribution (Diamond 1975)
-    <hr/><br/>
-
-    .center[![:scale 55%](./fig/figCS3.png)]
-
-
-
-    ---
-    # What did I do?
-    <hr/><br/>
-
-    .column[
-    ## Observed *vs* Expected
-    ]
-    .column[
-    ### `\(P(X_i,X_j) - P(X_i)P(X_j)\)`
-    ]
-
-    ---
-    # What did I do?
-    <hr/><br/>
-
-    .column[
-    ## Observed *vs* Expected
-    ### `\(P(X_i,X_j) - P(X_i)P(X_j)\)`
-    ]
-    .column[
-    ### `\(P(X_i,X_j) - P(X_i)P(X_j)=0\)`
-
-    <br/>
-
-    .center[![:scale 37%](./fig/figCS1.png)]
-    ]
-
-    ---
-    # What did I do?
-    <hr/><br/>
-
-    .column[
-    ## Observed *vs* Expected
-    ### `\(P(X_i,X_j) - P(X_i)P(X_j)\)`
-    ]
-    .column[
-    ### `\(P(X_i,X_j) - P(X_i)P(X_j)<0\)`
-
-    <br/>
-
-    .center[![:scale 37%](./fig/figCS2.png)]
-    ]
-
-    ---
-    # What did I do?
-    <hr/><br/>
-
-    .column[
-    ## Observed *vs* Expected
-    ### `\(P(X_i,X_j) - P(X_i)P(X_j)\)`
-    ]
-    .column[
-    ### `\(P(X_i,X_j) - P(X_i)P(X_j)>0\)`
-
-    <br/>
-
-    .center[![:scale 37%](./fig/figCS3.png)]
-    ]
-
-    ---
-    # What did I do?
-    <hr/><br/>
-
-    .column[
-    ## Observed *vs* Expected
-    ### `\(P(X_i,X_j) - P(X_i)P(X_j)\)`
-    <br/>
-
-    ## Simulated co-occurrence (trophic interactions)
-    ]
-    .column[
-    <br/>
-    <br/>
-
-    .center[![:scale 42%](./fig/figeco8.png)]
-    ]
-
-    ---
-    # What did I do?
-    <hr/><br/>
-
-    .column[
-    ## Observed *vs* Expected
-    ### `\(P(X_i,X_j) - P(X_i)P(X_j)\)`
-    <br/>
-
-    ## Simulated co-occurrence (trophic interactions)
-    <br/>
-
-    ## Simulated networks
-    ]
-    .column[
-    <br/>
-
-    .center[![:scale 38%](./fig/figweb.png)]
-    ]
-
-
-
-    ---
-    # Co-occurrence and shortest path
-    <hr/><br/>
-
-    .center[![:scale 100%](./fig/figsht0.png)]
-
-    ---
-    # Co-occurrence and shortest path
-    <hr/><br/>
-
-    .center[![:scale 100%](./fig/figsht1.png)]
-
-    ---
-    # Co-occurrence and shortest path
-    <hr/><br/>
-
-    .center[![:scale 100%](./fig/figsht2.png)]
-
-
-    ---
-    # Co-occurrence and shortest path
-    <hr/><br/>
-
-    .center[![:scale 100%](./fig/figsht3.png)]
-
-    ---
-    # Co-occurrence and degree
-    <hr/><br/>
-
-    .center[![:scale 100%](./fig/figdeg0.png)]
-
-    ---
-    # Co-occurrence and degree
-    <hr/><br/>
-
-    .center[![:scale 100%](./fig/figdeg1.png)]
-
-    ---
-    # Co-occurrence and degree
-    <hr/><br/>
-
-    .center[![:scale 100%](./fig/figdeg2.png)]
-
-
-    ---
-    # Co-occurrence and degree
-    <hr/><br/>
-
-    .center[![:scale 100%](./fig/figdeg3.png)]
-
-
-
-    ---
-    # Conclusion and limits
-    <hr/><br/>
-
-    ## Shortest path <i class="fa fa-long-arrow-up" aria-hidden="true"></i> &nbsp;&nbsp; `\( \Longrightarrow \)` &nbsp;&nbsp; detection <i class="fa fa-long-arrow-down" aria-hidden="true"></i>
-
-    --
-
-    ## Degree <i class="fa fa-long-arrow-up" aria-hidden="true"></i> &nbsp;&nbsp; `\( \Longrightarrow \)` &nbsp;&nbsp; detection <i class="fa fa-long-arrow-down" aria-hidden="true"></i>
-
-
-    --
-
-    <br/>
-
-    ## Abiotic variables?
-
-    --
-    ## Empirical data?
-
-
-    --
-    <br/><br/><br/>
-    ### .right[Cazelles *et al*, 2016, [*Theoretical Ecology*.](http://doi.org/10.1007/s12080-015-0281-9)]
-
-
-
-
-
-
-
-
-
-
-
-
-    ---
-    name: style2
-    layout: true
-    class: center, middle, style2
-    ---
-    # DEALING WITH REAL DATA SETS
-    <hr />
-    ### Co-occurrence and empirical networks
-    ### Cazelles *et al*, 2017, *in prep*
-
-    ---
-    name: style1
-    layout: true
-    class: style1
-
-    ---
-    # Abiotic variables
-    <hr/><br/>
-
-    .center[![:scale 90%](./fig/figab1.png)]
-
-    ---
-    # Abiotic variables
-    <hr/><br/>
-
-    .center[![:scale 90%](./fig/figab2.png)]
-
-    ---
-    # Integrating abiotic variables (G)
-    <hr/><br/>
-
-    # `\(P(X_{i,G},X_{j,G})\)` *vs*  `\(P(X_{i,G})P(X_{j,G})\)`
-
-
-    ---
-    # Integrating abiotic variables (G)
-    <hr/><br/>
-
-    .center[![:scale 100%](./fig/figshtenv1.png)]
-
-    ---
-    # Integrating abiotic variables (G)
-    <hr/><br/>
-
-    .center[![:scale 100%](./fig/figshtenv2.png)]
-
-
-    ---
-    # What did I do?
-    <hr/><br/>
-
-    ## Five data sets
-    --
-
-    <br/>
-
-    ## `\(P(X_{i,G},X_{j,G})\)` *vs*  `\(P(X_{i,G})P(X_{j,G})\)`
-    --
-
-    <br/>
-
-    ## SDMs to assign presence probabilities given abiotic context
-    --
-
-    <br/>
-
-    ## Detection <i class="fa fa-long-arrow-down" aria-hidden="true"></i> once abiotic variables integrated
 
 
 
@@ -901,7 +466,7 @@
     <hr/>
 
     .column[
-      .center[![:scale 87%](./fig/mapsal1.png)]
+      .center[![:scale 87%](img/mapsal1.png)]
     ]
 
     .column[
@@ -917,7 +482,7 @@
     <hr/>
 
     .column[
-      .center[![:scale 87%](./fig/mapsal2.png)]
+      .center[![:scale 87%](img/mapsal2.png)]
     ]
 
     .column[
@@ -948,77 +513,77 @@
     # Willow <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Galler
     <hr/><br/>
 
-    ![:scale 100%](./fig/figSG0.png)
+    ![:scale 100%](img/figSG0.png)
 
     ---
     # Willow <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Galler
     <hr/><br/>
 
-    ![:scale 100%](./fig/figSG1.png)
+    ![:scale 100%](img/figSG1.png)
 
     ---
     # Willow <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Galler
     <hr/><br/>
 
-    ![:scale 100%](./fig/figSG2.png)
+    ![:scale 100%](img/figSG2.png)
 
     ---
     # Willow <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Galler
     <hr/><br/>
 
-    ![:scale 100%](./fig/figSG3.png)
+    ![:scale 100%](img/figSG3.png)
 
     ---
     # Willow <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Galler
     <hr/><br/>
 
-    ![:scale 100%](./fig/figSG4.png)
+    ![:scale 100%](img/figSG4.png)
 
     ---
     # Willow <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Galler
     <hr/><br/>
 
-    ![:scale 100%](./fig/figSG5.png)
+    ![:scale 100%](img/figSG5.png)
 
 
     ---
     # Galler <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Parasitoids
     <hr/><br/>
-    ![:scale 100%](./fig/figGP5.png)
+    ![:scale 100%](img/figGP5.png)
 
 
     ---
     # Co-occurrence and shortest path
     <hr/><br/>
 
-    .center[![:scale 100%](./fig/figsht3.png)]
+    .center[![:scale 100%](img/figsht3.png)]
 
     ---
     # Willow <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Galler *vs* Galler <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Parasitoids
     <hr/>
 
-    .center[![:scale 53%](./fig/figSG5.png)]
-    .center[![:scale 53%](./fig/figGP5.png)]
+    .center[![:scale 53%](img/figSG5.png)]
+    .center[![:scale 53%](img/figGP5.png)]
 
     ---
     # Willow <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Galler *vs* Galler <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Parasitoids
     <hr/>
 
-    .center[![:scale 53%](./fig/figSG6.png)]
-    .center[![:scale 53%](./fig/figGP6.png)]
+    .center[![:scale 53%](img/figSG6.png)]
+    .center[![:scale 53%](img/figGP6.png)]
 
     ---
     # Willow <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Galler *vs* Galler <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Parasitoids
     <hr/>
 
-    .center[![:scale 53%](./fig/figSG7.png)]
-    .center[![:scale 53%](./fig/figGP7.png)]
+    .center[![:scale 53%](img/figSG7.png)]
+    .center[![:scale 53%](img/figGP7.png)]
 
     ---
     # Co-occurrence and degree
     <hr/><br/>
 
-    .center[![:scale 100%](./fig/figdeg3.png)]
+    .center[![:scale 100%](img/figdeg3.png)]
 
 
 
@@ -1113,55 +678,55 @@
     # Using species as predictors?
     <hr/><br/>
 
-    .center[![:scale 100%](./fig/figAUC1.png)]
+    .center[![:scale 100%](img/figAUC1.png)]
 
     ---
     # Using species as predictors?
     <hr/><br/>
 
-    .center[![:scale 100%](./fig/figAUC2.png)]
-
-
-    ---
-    # Using species as predictors?
-    <hr/><br/>
-
-    .center[![:scale 100%](./fig/figAUC3.png)]
+    .center[![:scale 100%](img/figAUC2.png)]
 
 
     ---
     # Using species as predictors?
     <hr/><br/>
 
-    .center[![:scale 100%](./fig/figAUC4.png)]
+    .center[![:scale 100%](img/figAUC3.png)]
 
 
     ---
     # Using species as predictors?
     <hr/><br/>
 
-    .center[![:scale 100%](./fig/figAUC5.png)]
+    .center[![:scale 100%](img/figAUC4.png)]
 
 
     ---
     # Using species as predictors?
     <hr/><br/>
 
-    .center[![:scale 100%](./fig/figAUC6.png)]
+    .center[![:scale 100%](img/figAUC5.png)]
 
 
     ---
     # Using species as predictors?
     <hr/><br/>
 
-    .center[![:scale 100%](./fig/figAUC7.png)]
+    .center[![:scale 100%](img/figAUC6.png)]
+
+
+    ---
+    # Using species as predictors?
+    <hr/><br/>
+
+    .center[![:scale 100%](img/figAUC7.png)]
 
 
     ---
     # What do we really integrate?
     <hr/>
 
-    .center[![:scale 90%](./fig/figshtenv2.png)]
+    .center[![:scale 90%](img/figshtenv2.png)]
 
     --
 
@@ -1195,31 +760,31 @@
     # Towards mechanistic NDMs?
     <hr/><br/>
 
-    .center[![:scale 100%](./fig/figLast1.png)]
+    .center[![:scale 100%](img/figLast1.png)]
 
     ---
     # Towards mechanistic NDMs?
     <hr/><br/>
 
-    .center[![:scale 100%](./fig/figLast2.png)]
+    .center[![:scale 100%](img/figLast2.png)]
 
     ---
     # Towards mechanistic NDMs?
     <hr/><br/>
 
-    .center[![:scale 100%](./fig/figLast3.png)]
+    .center[![:scale 100%](img/figLast3.png)]
 
     ---
     # Towards mechanistic NDMs?
     <hr/><br/>
 
-    .center[![:scale 100%](./fig/figLast4.png)]
+    .center[![:scale 100%](img/figLast4.png)]
 
     ---
     # Towards mechanistic NDMs?
     <hr/><br/>
 
-    .center[![:scale 100%](./fig/figLast5.png)]
+    .center[![:scale 100%](img/figLast5.png)]
 
 
 
